# PicoLA

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: default-ci.yml
include/: mat.h  vec.h
src/: vec.cpp
tests/: CMakeLists.txt  TestMat.cpp  TestVec.cpp
